PY: oop basic v3

--- a/Py/09OOP/00py_oop.ipynb
+++ b/Py/09OOP/00py_oop.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "In object-oriented programming, variables at the class level are referred to as class variables, whereas variables at the object level are called instance variables.\n",
     "\n",
-    "**Class Variable**\n",
+    "### Instance Attribute and Class Attributes\n",
+    "\n",
+    "#### Class Attributes\n",
     "\n",
     "- defined within the _class construction_\n",
     "- shared by all instances of the class\n",
@@ -70,7 +72,7 @@
     "\n",
     "They therefore will generally have the same value for every instance unless you are using the class variable to initialize a variable.\n",
     "\n",
-    "**Instance Variables**\n",
+    "#### Instance Variables\n",
     "\n",
     "Instance variables are owned by instances of the class. This means that for each object or instance of a class, the instance variables are different.\n",
     "\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +106,8 @@
     "\tdef __init__(self,v):\n",
     "\t # instance variables - only availabe to instance\n",
     "\t\tself.instance_var = v\n",
+    "\t\t# local variable - only availabe to method\n",
+    "\t\tlocal_var = 0\n",
     "\n",
     "t1= Test(10)\n",
     "t2= Test(20)\n",
@@ -112,7 +116,80 @@
     "print(t1.instance_var)\n",
     "print()\n",
     "print(t2.class_var)\n",
-    "print(t2.instance_var)\n"
+    "print(t2.instance_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Test' object has no attribute 'local_var'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-bac5ddb7ca08>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocal_var\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Test' object has no attribute 'local_var'"
+     ]
+    }
+   ],
+   "source": [
+    "t1.local_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'instance_var': 10}\n",
+      "{'instance_var': 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t1.__dict__)\n",
+    "print(t2.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hasattr(t1,'instance_var'))\n",
+    "print(hasattr(t1, 'class_var'))\n",
+    "print(hasattr(t1, '__init__'))\n",
+    "\n",
+    "print(getattr(t1,'instance_var'))\n",
+    "print(getattr(t1, 'class_var'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EX- 1"
    ]
   },
   {
@@ -315,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +433,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> making 'd' private"
+    "> making 'd' private\n",
+    "\n",
+    "The `private` members of a class are only accessible within the class. In Python, a private member can be defined by using a prefix `__` (double underscore).\n"
    ]
   },
   {
@@ -367,13 +446,15 @@
    "source": [
     "class FrqCounter():\n",
     "    def __init__(self):\n",
+    "        # private member\n",
     "        self.__d = {}\n",
     "    \n",
     "    def add(self,v):\n",
+    "        # private members are accessible from a class\n",
     "        self.__d[v.lower()] = self.__d.get(v.lower(),0) + 1\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return f\"FC ({self.d})\""
+    "        return f\"FC ({self.d})\"\n"
    ]
   },
   {
@@ -407,24 +488,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### force accessing private methods using `__dict__`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_FrqCounter__d': {'python': 2, 'c++': 1}}\n"
-     ]
-    }
-   ],
-   "source": [
-    " print(fcnt.__dict__)"
+    "#### Name Mangling to access private members\n",
+    "\n",
+    "Python performs name mangling on private attributes. Every member with a double underscore will be changed to `object._class__variable`."
    ]
   },
   {
@@ -445,10 +511,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_FrqCounter__d': {'python': 2, 'c++': 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(fcnt.__dict__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Magic Methods\n",
+    "### Magic Methods\n",
     "\n",
     "- they are called automatically when some particular event occur\n",
     "\n",
@@ -691,6 +774,265 @@
     "# __iter__\n",
     "for i in fc:\n",
     "    print(i,\"->\",fc[i])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Class method and Static method \n",
+    "\n",
+    "#### Static Method\n",
+    "\n",
+    "A static method does not receive an implicit first argument (`self`). \n",
+    "\n",
+    "Syntax: \n",
+    "\n",
+    "```python\n",
+    "class C(object):\n",
+    "    @staticmethod\n",
+    "    def fun(arg1, arg2, ...):\n",
+    "        ...\n",
+    "returns: a static method for function fun.\n",
+    "```\n",
+    "\n",
+    "- A static method is also a method that is bound to the class and not the object of the class.\n",
+    "- A static method can’t access or modify the class state.\n",
+    "- It is present in a class because it makes sense for the method to be present in class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to School!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student():\n",
+    "\tdef __init__(self,name,age):\n",
+    "\t\tself.name = name\n",
+    "\t\tself.age = age\n",
+    "\t\n",
+    "\tdef __str__(self):\n",
+    "\t\treturn f\"Student [{self.name}, {self.age}]\"\n",
+    "\t\n",
+    "\t@staticmethod\n",
+    "\tdef welcomeToSchool(): # self is not required\n",
+    "\t\tprint(\"Welcome to School!!\")\n",
+    "\t\n",
+    "\t@staticmethod\n",
+    "\tdef isTeen(self,age): # explicitly mentioning self\n",
+    "\t\treturn age>=13 and age<=19\n",
+    "\n",
+    "s1 = Student(\"soikat\",22)\n",
+    "s1.welcomeToSchool()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to School!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "Student.welcomeToSchool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student.isTeen(s1,22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Class Method\n",
+    "\n",
+    "Class methods are methods that are called on the class itself, not on a specific object instance. Therefore, it belongs to a class level, and all class instances share a class method.\n",
+    "\n",
+    "- **A class method is bound to the class and not the object of the class**. It can access only class variables.\n",
+    "- It can modify the class state by changing the value of a class variable that would apply across all the class objects.\n",
+    "\n",
+    "The difference between a static method and a class method is:\n",
+    "\n",
+    "- Static method knows nothing about the class and just deals with the parameters\n",
+    "- Class method works with the class since its parameter is always the class itself.\n",
+    "\n",
+    "The class method can be called both by the class and its object.\n",
+    "\n",
+    "```python\n",
+    "class C(object):\n",
+    "    @classmethod\n",
+    "    def fun(cls, arg1, arg2, ...):\n",
+    "       ....\n",
+    "# fun: function that needs to be converted into a class method\n",
+    "# returns: a class method for function.\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### When do you use the class method?\n",
+    "\n",
+    "###### 1. Factory methods\n",
+    "\n",
+    "Class methods are used when we are dealing with factory methods. **Factory methods are those methods that return a class object for different use cases**. Thus, factory methods create concrete implementations of a common interface.\n",
+    "\n",
+    "It is similar to function overloading in C++. Since, Python doesn't have anything as such, class methods and static methods are used.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jessa's age is: 20\n",
+      "Joy's age is: 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    @classmethod\n",
+    "    def calculate_age(cls, name, birth_year):\n",
+    "        # calculate age an set it as a age\n",
+    "        # return new object\n",
+    "        return cls(name, date.today().year - birth_year)\n",
+    "\n",
+    "    def show(self):\n",
+    "        print(self.name + \"'s age is: \" + str(self.age))\n",
+    "\n",
+    "\n",
+    "jessa = Student('Jessa', 20)\n",
+    "jessa.show()\n",
+    "\n",
+    "# create new object using the factory method\n",
+    "joy = Student.calculate_age(\"Joy\", 1995)\n",
+    "joy.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The constructor takes normal parameters `name` and `age`. While, `fromBirthYear` takes `class`, `name` and `birthYear`, calculates the current age by subtracting it with the current year and returns the class instance.\n",
+    "\n",
+    "The `fromBirthYear` method takes `Person` class (not `Person` object) as the first parameter `cls` and **returns** the constructor by calling `cls(name, date.today().year - birthYear)`, which is equivalent to `Person(name, date.today().year - birthYear)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### 2. Correct instance creation in inheritance\n",
+    "\n",
+    "Whenever you derive a class from implementing a factory method as a class method, it ensures correct instance creation of the derived class. \n",
+    "\n",
+    "You can create a static method for the above example but the object it creates, will always be hard coded as Base class. \n",
+    "\n",
+    "But, when you use a class method, it creates the correct instance of the derived class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "# random Person\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def fromFathersAge(name, fatherAge, fatherPersonAgeDiff):\n",
+    "        return Person(name, date.today().year - fatherAge + fatherPersonAgeDiff)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def fromBirthYear(cls, name, birthYear):\n",
+    "        return cls(name, date.today().year - birthYear)\n",
+    "\n",
+    "    def display(self):\n",
+    "        print(self.name + \"'s age is: \" + str(self.age))\n",
+    "\n",
+    "# Inheritance\n",
+    "class Man(Person):\n",
+    "    sex = 'Male'\n",
+    "\n",
+    "\n",
+    "man = Man.fromBirthYear('John', 1985) # using classmethod\n",
+    "print(isinstance(man, Man))\n",
+    "\n",
+    "man1 = Man.fromFathersAge('John', 1965, 20) # using staticmethod\n",
+    "print(isinstance(man1, Man))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, using a `static` method to create a class instance wants us to hardcode the instance type during creation.\n",
+    "\n",
+    "This clearly causes a problem when inheriting `Person` to `Man`.\n",
+    "\n",
+    "`fromFathersAge` method **doesn't return** a `Man` object but its base class `Person`'s object.\n",
+    "\n",
+    "This violates the OOP paradigm. Using a class method as `fromBirthYear` can ensure the OOP-ness of the code since it takes the first parameter as the class itself and calls its factory method."
    ]
   },
   {
@@ -1228,7 +1570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2
  },
